@@ -30,10 +30,10 @@ endif
 
 if ENABLE_PULSE_JAVA
 # include the makefile in pulseaudio subdir
-PULSE_JAVA_DIR = pulseaudio
+PULSE_JAVA_DIR = $(srcdir)/pulseaudio
 PULSE_JAVA_NATIVE_SRCDIR = $(PULSE_JAVA_DIR)/src/native
 PULSE_JAVA_JAVA_SRCDIR = $(PULSE_JAVA_DIR)/src/java
-PULSE_JAVA_CLASS_DIR = $(PULSE_JAVA_DIR)/bin
+PULSE_JAVA_CLASS_DIR = $(abs_top_builddir)/pulseaudio
 else 
 PULSE_JAVA_DIR =
 PULSE_JAVA_NATIVE_SRCDIR =
@@ -639,8 +639,8 @@ stamps/patch.stamp: stamps/patch-fsg.stamp
 	sed -i "s#IcedTea6#IcedTea6 $${icedtea_version}#" openjdk/jdk/make/common/shared/Defs.gmk
 
 if ENABLE_PLUGIN
-	cp -a plugin/icedtea/sun/applet/*java openjdk/jdk/src/share/classes/sun/applet/
-	cp -a plugin/icedtea/netscape rt/
+	cp -a $(srcdir)/plugin/icedtea/sun/applet/*java openjdk/jdk/src/share/classes/sun/applet/
+	cp -a $(srcdir)/plugin/icedtea/netscape rt/
 endif
 
 clean-patch:
@@ -1469,14 +1469,14 @@ if ENABLE_PULSE_JAVA
 	if ! test -d $(ICEDTEA_BOOT_DIR) ; \
 	then \
 		(cd $(PULSE_JAVA_JAVA_SRCDIR); \
-		 $(JAVAC) -d ../../../$(PULSE_JAVA_CLASS_DIR) \
+		 $(JAVAC) -d $(PULSE_JAVA_CLASS_DIR) \
 		-bootclasspath  \
 	        '$(OPENJDK_SOURCEPATH_DIRS):$(abs_top_builddir)/generated' \
 		org/classpath/icedtea/pulseaudio/*.java\
 		) \
         else \
 		(cd $(PULSE_JAVA_JAVA_SRCDIR); \
-		$(ICEDTEA_BOOT_DIR)/bin/javac -d ../../../$(PULSE_JAVA_CLASS_DIR)\
+		$(ICEDTEA_BOOT_DIR)/bin/javac -d $(PULSE_JAVA_CLASS_DIR)\
 		-bootclasspath \
 	        '$(ICEDTEA_BOOT_DIR)/jre/lib/rt.jar' \
 		org/classpath/icedtea/pulseaudio/*.java\
