@@ -1,3 +1,9 @@
+2008-10-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
+	Fix LiveConnect and PulseAudio paths to work
+	when srcdir != builddir.
+
 2008-10-20  Alon Bar-Lev  <alon.barlev@gmail.com>
 
 	PR icedtea/224:
